# 04-Colas

./: CMakeLists.txt  README.md
Ej-01/: main.cpp  sonIguales.cpp  sonIguales.h
Ej-02/: esPalidromo.cpp  esPalidromo.h  main.cpp
Ej-03/: ColaPrioridad.cpp  ColaPrioridad.h  main.cpp
Ej-04/: FilaSupermercado.h  Lista.h  main.cpp
test/: CMakeLists.txt  Ej-01-test.cpp  Ej-02-test.cpp  Ej-03-test.cpp
